<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
       android:background="@color/bg_color"
    android:orientation="vertical" >

    <include layout="@layout/toolbar_gradient">

    </include>
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardView"
                android:layout_gravity="center"
                android:layout_margin="@dimen/five_dimen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="@color/White"
                >
                <RelativeLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/five_dimen"
                    android:background="@drawable/dashed_rectangle_pink"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:orientation="vertical">
                </RelativeLayout>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView1"
        android:layout_below="@+id/cardView"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_23dp"
        android:layout_margin="@dimen/ten_dimen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@color/White"
        >
    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/ten_dimen"
        android:background="@drawable/dashed_rectangle_pink"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/twenty_margin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgMail"
                    android:background="@drawable/ic_mail"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txtEmail"
                    style="@style/style_about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgMail"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/email_lbl" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/twenty_margin"
                android:layout_below="@+id/layout_email"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgFb"
                    android:background="@drawable/ic_fb"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txtFacebook"
                    style="@style/style_about_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgFb"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:clickable="true"
                    android:text="@string/facebook_lbl" />
            </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/layout_twiter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/twenty_five_margin"
                            android:layout_below="@+id/layout_facebook"
                            android:orientation="vertical" >


                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imgTwitter"
                                android:background="@drawable/ic_twitter"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true" />

                            <TextView
                                android:id="@+id/txtTwitter"
                                style="@style/style_about_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/imgTwitter"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/activity_vertical_margin"
                                android:clickable="true"
                                android:layout_marginBottom="@dimen/five_dimen"
                                android:text="@string/twitter_lbl" />
                        </RelativeLayout>
            
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </RelativeLayout>


</LinearLayout>
